--- a/daki_spec.html
+++ b/daki_spec.html
@@ -20,7 +20,7 @@
 
       <p>Daki is a small computer programming language inspired by Prolog and Datalog. It is a declarative, logic, typed language based on Horn clauses, aimed at solving problems via deduction.</p>
 
-      <p>To execute a Daki program you must use a Daki language interpreter. You can find on GitHub <a href="https://github.com/gonmf/dakilang" target="_blank" rel="noopener">the reference interpreter</a> (external link).</p>
+      <p>To execute a Daki program you must use a Daki language interpreter. You can find on GitHub <a href="https://github.com/gonmf/dakilang" target="_blank" rel="noopener">the reference interpreter</a> (<a href="https://repo.or.cz/dakilang.git" target="_blank" rel="noopener">mirror</a>).</p>
 
       <p>Regardless of your familiarity with Prolog or Datalog, the Daki language has significant differences to both. For this reason the following short language definition has been compiled, with examples.</p>
 
