--- a/dakilang.html
+++ b/dakilang.html
@@ -30,7 +30,7 @@
       <p><a href="daki_spec.html">Daki Language Specification</a></p>
 
       <h2>Software</h2>
-      <p><a href="https://github.com/gonmf/dakilang" target="_blank" rel="noopener">Interpreter written in Ruby (GitHub)</a> (<a href="https://repo.or.cz/dakilang.git" target="_blank" rel="noopener">mirror</a>)</p>
+      <p><a href="https://github.com/gonmf/dakilang" target="_blank" rel="noopener">Interpreter written in Ruby</a> (<a href="https://repo.or.cz/dakilang.git" target="_blank" rel="noopener">mirror</a>)</p>
     </div>
   </body>
 </html>
