--- a/daki_spec.html
+++ b/daki_spec.html
@@ -16,6 +16,8 @@
 
   <body>
     <div class="container">
+      <a class="back" href="dakilang.html">← Home</a>
+
       <h1>Daki Language Specification</h1>
 
       <p>Daki is a small computer programming language inspired by Prolog and Datalog. It is a declarative, logic, typed language based on Horn clauses, aimed at solving problems via deduction.</p>
