--- a/dakilang.html
+++ b/dakilang.html
@@ -16,6 +16,8 @@
 
   <body>
     <div class="container">
+      <a class="back" href="index.html">← Author</a>
+
       <h1>Home of the Daki programming language</h1>
 
       <div style="background-color: #000; color: #fff; padding: 1rem; font-size: large">
