--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
       <p>I'm a computer engineer from Lisbon, Portugal, and am currently employed at <a href="https://moteefe.com/" target="_blank" rel="noopener">Moteefe</a>.</p>
 
-      <p>I'm also the author of <a href="https://github.com/gonmf/matilda" target="_blank" rel="noopener">Matilda - a Go playing program</a>, and the <a href="dakilang.html">Daki programming language</a>; and own the websites <a href="https://airpollution.today/" target="_blank" rel="noopener">airpollution.today</a> and <a href="https://bowie.cloud/" target="_blank" rel="noopener">bowie.cloud</a>.</p>
+      <p>I'm also the author of <a href="matilda.html">Matilda - a Go playing program</a>, and the <a href="dakilang.html">Daki programming language</a>; and own the websites <a href="https://airpollution.today/" target="_blank" rel="noopener">airpollution.today</a> and <a href="https://bowie.cloud/" target="_blank" rel="noopener">bowie.cloud</a>.</p>
 
       <p>Email me at gonmf (at) sapo.pt</p>
     </div>
