--- a/gallery.html
+++ b/gallery.html
@@ -26,6 +26,11 @@
       </header>
 
       <main class="gallery">
+        <a href="img/original/20240517.png"><img src="img/thumb/20240517.png" /></a>
+        <a href="img/original/20240224.jpg"><img src="img/thumb/20240224.jpg" /></a>
+        <a href="img/original/20240223.jpg"><img src="img/thumb/20240223.jpg" /></a>
+        <a href="img/original/20231022_2.jpg"><img src="img/thumb/20231022_2.jpg" /></a>
+        <a href="img/original/20231022.jpg"><img src="img/thumb/20231022.jpg" /></a>
         <a href="img/original/20220920_3.jpg"><img src="img/thumb/20220920_3.jpg" /></a>
         <a href="img/original/20220920_2.jpg"><img src="img/thumb/20220920_2.jpg" /></a>
         <a href="img/original/20220920.jpg"><img src="img/thumb/20220920.jpg" /></a>
