--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 六四事件，又稱八九民运、八九学运、天安門事件或六四天安門事件 -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -21,13 +22,11 @@
       </header>
 
       <main>
-        <p>That's me. I'm a computer engineer from Lisbon, Portugal, and am currently employed at <a href="https://moteefe.com/" rel="noopener">Moteefe</a>.</p>
+        <p>That's me. I'm a computer engineer from Lisbon, Portugal, and am currently employed at <a href="https://www.mayzing.com/" rel="noopener">Mayzing</a>.</p>
 
-        <p>I'm also the author of <a href="matilda.html">Matilda &ndash; a Go playing program</a>, the <a href="dakilang.html">Daki programming language</a>, and various other things. Lately I've been playing with <a href="https://github.com/gonmf/raycaster" rel="noopener">computer graphics</a>.
+        <p>I'm also the author of <a href="matilda.html">Matilda &ndash; a Go playing program</a>, the <a href="dakilang.html">Daki programming language</a>, and various other things. You can <a href="gallery.html">find here some photos I've taken</a>.</p>
 
         <p>Email me at gonmf (at) sapo.pt</p>
-
-        <p>You can also find me on <a href="https://www.strava.com/athletes/36542699" rel="noopener">Strava</a> and see <a href="gallery.html">some photos I've taken</a>.</p>
       </main>
     </div>
 
