--- a/inicio2.html
+++ b/inicio2.html
@@ -76,18 +76,9 @@
             lastDate = date
 
             tableCell = document.createElement('th')
-            tableRow.appendChild(tableCell)
-            tableCell = document.createElement('th')
-            tableRow.appendChild(tableCell)
-
-            tableCell = document.createElement('th')
             tableCell.innerHTML = `${date.toLocaleDateString('en-US', { weekday:"long", month:"long", day: "numeric"})}`
             tableCell.style = "text-align: center"
-            tableRow.appendChild(tableCell)
-
-            tableCell = document.createElement('th')
-            tableRow.appendChild(tableCell)
-            tableCell = document.createElement('th')
+            tableCell.colSpan = "5"
             tableRow.appendChild(tableCell)
 
             table.appendChild(tableRow)
@@ -97,12 +88,12 @@
           tableCell = document.createElement('td')
           var description = item1.weather[0].description
           tableCell.innerHTML = [description, item1['pop'] > 0 ? `, ${Math.round(item1['pop'] * 100)}% prob.` : ''].join('')
-          tableCell.style = 'text-align: right; padding-right: 40px;'
+          tableCell.style = 'text-align: left; padding-right: 20px;'
           if (Math.round(item1['pop'] * 100) >= 70) {
-            tableCell.style = 'text-align: right; padding-right: 40px; color: red;'
+            tableCell.style = 'text-align: left; padding-right: 20px; color: red;'
           }
           if (description === 'moderate rain') {
-            tableCell.style = 'text-align: right; padding-right: 40px; color: red; font-weight: bold;'
+            tableCell.style = 'text-align: left; padding-right: 20px; color: red; font-weight: bold;'
           }
           tableRow.appendChild(tableCell)
 
@@ -119,7 +110,7 @@
 
           tableCell = document.createElement('td')
           tableCell.innerHTML = `${date.getHours()}:00`
-          tableCell.style = 'text-align: center'
+          tableCell.style = 'text-align: center; padding: 0 20px'
           tableRow.appendChild(tableCell)
 
           tableCell = document.createElement('td')
@@ -136,12 +127,12 @@
           tableCell = document.createElement('td')
           var description = item2.weather[0].description
           tableCell.innerHTML = [description, item2['pop'] > 0 ? `, ${Math.round(item2['pop'] * 100)}% prob.` : ''].join('')
-          tableCell.style = 'text-align: left; padding-left: 40px;'
+          tableCell.style = 'text-align: right; padding-left: 20px;'
           if (Math.round(item2['pop'] * 100) >= 70) {
-            tableCell.style = 'text-align: left; padding-left: 40px; color: red;'
+            tableCell.style = 'text-align: right; padding-left: 20px; color: red;'
           }
           if (description === 'moderate rain') {
-            tableCell.style = 'text-align: left; padding-left: 40px; color: red; font-weight: bold;'
+            tableCell.style = 'text-align: right; padding-left: 20px; color: red; font-weight: bold;'
           }
           tableRow.appendChild(tableCell)
 
